--- a/style/general.css
+++ b/style/general.css
@@ -11,6 +11,7 @@
   --input-border: hsl(233, 14%, 35%);
   --text-checked: hsl(233, 14%, 35%);
   --blue: hsl(220, 98%, 66%);
+  --error: hsl(0, 80%, 66%);
 }
 
 [data-theme=light] {
@@ -25,6 +26,7 @@
   --input-border: hsl(233, 11%, 84%);
   --text-checked: hsl(252, 11%, 91%);
   --blue: hsl(220, 98%, 55%);
+  --error: hsl(0, 80%, 49%);
 }
 
 *, *::before, *::after {
@@ -216,7 +218,7 @@ form .task-input-decorative-circle {
   border-radius: 0.375rem;
   background: var(--bg-primary);
   font-size: clamp(0.875rem, 3vw, 1.125rem);
-  color: hsl(0, 80%, 66%);
+  color: var(--error);
   text-align: center;
   padding: 1.125rem;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
